# simplit-board

./: README.md  pyproject.toml
.github/workflows/: ci.yml
packaging/: simplit-board.service
src/simplit_board/: __init__.py  auth.py  bootstrap.py  cli.py  config.py  identity.py  naming.py  presence.py  registrar.py  state.py  supervisor.py  verify.py
