[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simplit-board"
version = "0.1.0"
description = "SimplitSecurity board agent — registers the appliance and receives/verifies/deploys signed Java service updates over the presence relay."
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "cryptography>=42.0",
    "websocket-client>=1.7",
    "coolname>=2.2",
]

[project.scripts]
simplit-board = "simplit_board.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
